--- a/languages/pronamic-slider-nl_NL.po
+++ b/languages/pronamic-slider-nl_NL.po
@@ -1,59 +1,133 @@
 # Copyright (C) 2020 Pronamic
-# This file is distributed under the same license as the Pronamic Read More plugin.
+# This file is distributed under the same license as the Pronamic Slider plugin.
 msgid ""
 msgstr ""
-"Project-Id-Version: Pronamic Read More 1.0.0\n"
-"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/pronamic-read-"
-"more\n"
+"Project-Id-Version: Pronamic Slider\n"
+"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/pronamic-slider\n"
+"POT-Creation-Date: 2026-01-06T10:37:11+00:00\n"
+"PO-Revision-Date: 2026-01-06 11:37+0100\n"
+"Last-Translator: \n"
 "Language-Team: \n"
+"Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2020-10-15 14:37+0200\n"
-"PO-Revision-Date: 2020-10-15 14:37+0200\n"
-"X-Generator: Poedit 1.8.6\n"
-"X-Domain: pronamic-read-more\n"
-"Last-Translator: \n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"Language: nl\n"
+"X-Generator: Poedit 3.8\n"
+"X-Domain: pronamic-slider\n"
 
 #. Plugin Name of the plugin
-#: build/index.js:1 src/index.js:22
-msgid "Pronamic Read More"
-msgstr ""
+#: pronamic-slider.php
+msgid "Pronamic Slider"
+msgstr "Pronamic Slider"
 
 #. Description of the plugin
-msgid "Pronamic block with read more integration."
-msgstr ""
+#: pronamic-slider.php
+msgid "Pronamic block with slider integration."
+msgstr "Pronamic block met slider integratie."
 
 #. Author of the plugin
+#: pronamic-slider.php
 msgid "Pronamic"
-msgstr ""
+msgstr "Pronamic"
 
-#: build/index.js:1 src/index.js:23
-msgid "Pronamic Read More block to hide or show content."
-msgstr ""
-
-#: build/index.js:1 src/edit.js:17 src/edit.js:36 src/save.js:14
-msgid "Read more"
-msgstr ""
-
-#: build/index.js:1 src/edit.js:24
+#: blocks-src/slider-pagination/index.js:17 blocks-src/slider/index.js:29
+#: blocks/slider-pagination/index.js:1 blocks/slider/index.js:1
 msgid "Settings"
-msgstr ""
+msgstr "Instellingen"
 
-#: build/index.js:1 src/edit.js:27
-msgid "Hide content by default"
-msgstr ""
+#: blocks-src/slider-pagination/index.js:19 blocks/slider-pagination/index.js:1
+msgid "Type"
+msgstr "Type"
 
-#: build/index.js:1 src/edit.js:34
-msgid "Read more label"
-msgstr ""
+#: blocks-src/slider-pagination/index.js:22 blocks/slider-pagination/index.js:1
+msgid "Bullets"
+msgstr "Bullets"
 
-#: build/index.js:1 src/edit.js:42
-msgid "Read less label"
-msgstr ""
+#: blocks-src/slider-pagination/index.js:23 blocks/slider-pagination/index.js:1
+msgid "Progress bar"
+msgstr "Voortgangsbalk"
 
-#: build/index.js:1 src/edit.js:44 src/save.js:15
-msgid "Read less"
-msgstr ""
+#: blocks-src/slider/index.js:31 blocks-src/slider/index.js:81
+#: blocks/slider/index.js:1 build/index.js:1 src/index.js:119
+msgid "Slides per view"
+msgstr "Slides per weergave"
+
+#: blocks-src/slider/index.js:39 blocks/slider/index.js:1 build/index.js:1
+#: src/index.js:127
+msgid "Effect"
+msgstr "Effect"
+
+#: blocks-src/slider/index.js:42 blocks/slider/index.js:1 build/index.js:1
+#: src/index.js:130
+msgid "Slide"
+msgstr "Slide"
+
+#: blocks-src/slider/index.js:43 blocks/slider/index.js:1 build/index.js:1
+#: src/index.js:131
+msgid "Fade"
+msgstr "Fade"
+
+#: blocks-src/slider/index.js:49 blocks/slider/index.js:1 build/index.js:1
+#: src/index.js:137
+msgid "Autoplay"
+msgstr "Autoplay"
+
+#: blocks-src/slider/index.js:55 blocks/slider/index.js:1
+msgid "Centered Slides"
+msgstr "Gecentreerde slides"
+
+#: blocks-src/slider/index.js:61 blocks/slider/index.js:1
+msgid "Autoplay delay"
+msgstr "Autoplay vertraging"
+
+#: blocks-src/slider/index.js:67 blocks/slider/index.js:1 build/index.js:1
+#: src/index.js:143
+msgid "Loop"
+msgstr "Loop"
+
+#: blocks-src/slider/index.js:73 blocks/slider/index.js:1
+msgid "Space between"
+msgstr "Tussenruimte"
+
+#: blocks-src/slider/index.js:79 blocks/slider/index.js:1
+msgid "Mobile Settings"
+msgstr "Mobiele instellingen"
+
+#: block.json
+msgctxt "block title"
+msgid "Pronamic Slider"
+msgstr "Pronamic Slider"
+
+#: block.json
+msgctxt "block description"
+msgid "Pronamic block with slider integration."
+msgstr "Pronamic block met slider integratie."
+
+#: blocks-src/slide/block.json blocks/slide/block.json
+msgctxt "block title"
+msgid "Pronamic slide"
+msgstr "Pronamic slide"
+
+#: blocks-src/slider-navigation/block.json blocks/slider-navigation/block.json
+msgctxt "block title"
+msgid "Pronamic slider navigation"
+msgstr "Pronamic slider navigatie"
+
+#: blocks-src/slider-pagination/block.json blocks/slider-pagination/block.json
+msgctxt "block title"
+msgid "Pronamic slider pagination"
+msgstr "Pronamic slider paginatie"
+
+#: blocks-src/slider/block.json blocks/slider/block.json
+msgctxt "block title"
+msgid "Pronamic slider"
+msgstr "Pronamic slider"
+
+#: blocks-src/slides/block.json blocks/slides/block.json
+msgctxt "block title"
+msgid "Pronamic slides"
+msgstr "Pronamic slides"
+
+#~ msgid "type"
+#~ msgstr "type"
